RESOLVED FIXED282739
REGRESSION (285941@main): Networking process crashes due to RELEASE_ASSERT(!isEphemeral()) when WebResourceLoadStatisticsStore::postTask is called
https://bugs.webkit.org/show_bug.cgi?id=282739
Summary REGRESSION (285941@main): Networking process crashes due to RELEASE_ASSERT(!i...
Andy Estes
Reported 2024-11-06 21:41:09 PST
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-06 21:41:21 PST
Andy Estes
Comment 2 2024-11-06 21:47:27 PST
EWS
Comment 3 2024-11-07 01:01:17 PST
Committed 286271@main (5ec524715f89): <https://commits.webkit.org/286271@main> Reviewed commits have been landed. Closing PR #36312 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.