REGRESSION (285941@main): Networking process crashes due to RELEASE_ASSERT(!isEphemeral()) when WebResourceLoadStatisticsStore::postTask is called https://bugs.webkit.org/show_bug.cgi?id=282739 rdar://139408859

Reviewed by Jer Noble.

In 285941@main, WebPageProxy::decidePolicyForNavigationAction was changed to call
logFrameNavigation() when always-on logging is enabled in an ephemeral session, which results in the
LogFrameNavigation message being sent to WebResourceLoadStatisticsStore in the Networking process.
WebResourceLoadStatisticsStore does not expect to receive this message for ephemeral sessions,
leading to a RELEASE_ASSERT failure.

The change to call WebPageProxy::logFrameNavigation() in ephemeral sessions was made in error due to
a misunderstanding of the purpose of the function. Fixed this by reverting this part of 285941@main.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForNavigationAction):

Canonical link: https://commits.webkit.org/286271@main